# opentamra

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.cursor/rules/: cursor-rules-creation.mdc
backend/: __main__.py  cli.py  main.py  settings.py
backend/.cursor/rules/: async-concurrency.mdc  backend-core.mdc  fastapi-routes.mdc  pydantic-dataclasses.mdc  pytest-testing.mdc  python-mypy-type-checking.mdc  ruff-linting.mdc  uv-package-management.mdc
backend/api/: dependencies.py  router.py
backend/api/routes/: jobs.py  reports.py  uploads.py
backend/api/schemas/: __init__.py  jobs.py  reports.py  uploads.py
backend/core/: exceptions.py  types.py
backend/datasource/: azure_datalake.py  base.py  local.py  registry.py  sql_database.py
backend/ingest/: policy_filter.py  reader.py  schema_registry.py  validator.py
backend/jobs/: manager.py  store.py  worker.py
backend/llm/: client.py  prompts.py
backend/output/: manifest.py
backend/pipeline/: base_step.py  context.py  engine.py  registry.py
backend/pipeline/steps/: s00_load_inputs.py  s01_validate_inputs.py  s02_enrich_policies.py  s03_cumulative_premium_test.py  s04_mec_determination.py
backend/tests/: conftest.py
backend/tests/fixtures/: policies.csv  policy_filter_list.csv  seven_pay_factors.csv
backend/tests/test_api/: test_health.py
backend/tests/test_ingest/: test_policy_filter.py  test_reader.py
backend/tests/test_pipeline/: test_engine.py  test_seven_pay_integration.py  test_seven_pay_steps.py
config/: default.toml  development.toml  production.toml
data/input/: premiums.csv
frontend/: package.json
frontend/.cursor/rules/: frontend-core.mdc  frontend-data-flow.mdc  react-components.mdc
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/api/: client.js
frontend/src/components/Jobs/: JobDetail.js  JobForm.js  JobList.js
frontend/src/components/Layout/: Header.js  Layout.css  Layout.js  Sidebar.js
frontend/src/components/Reports/: ReportList.js  ReportViewer.js
frontend/src/components/common/: DataTable.js  FileUpload.js  StatusBadge.js
frontend/src/hooks/: useJobs.js  useReports.js
frontend/src/pages/: DashboardPage.js  JobsPage.js  NewJobPage.js  ReportsPage.js
frontend/src/utils/: constants.js  formatters.js
scripts/: seed_test_data.py
